--- a/be/package.json
+++ b/be/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "rss-parser": "^3.13.0"
