--- a/be/package.json
+++ b/be/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/cookie": "^0.6.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
@@ -24,10 +25,14 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@google/genai": "^1.29.0",
     "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10"
   }
